re-factoring: force using getLast() / getFirst()